apps/sabnzbd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: media
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: sabnzbd-vpn
  ports:
    - {name: http, port: 8080, targetPort: sabnzbd}
